--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.a7invensun.verifydemo">
 
+    <!--锁屏权限-->
+    <uses-permission android:name="android.permission.DISABLE_KEYGUARD" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -16,7 +19,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".statusBar.StatusBarShowActivity"></activity>
+        <activity android:name=".statusBar.StatusBarShowActivity" />
+        <activity android:name=".lockscreen.StartLockServiceActivity" />
+
+        <service android:name=".lockscreen.LockScreenService" />
+
+        <activity android:name=".lockscreen.LockScreenActivity"></activity>
     </application>
 
 </manifest>
