--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.a7invensun.verifydemo">
 
-    <!--锁屏权限-->
+    <!-- 锁屏权限 -->
     <uses-permission android:name="android.permission.DISABLE_KEYGUARD" />
 
     <application
@@ -24,7 +24,8 @@
 
         <service android:name=".lockscreen.LockScreenService" />
 
-        <activity android:name=".lockscreen.LockScreenActivity"></activity>
+        <activity android:name=".lockscreen.LockScreenActivity" />
+        <activity android:name=".bottonClickDiffusion.DiffusionActivity"></activity>
     </application>
 
 </manifest>
