--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity
+            android:name=".MainActivity"
+            android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -26,8 +28,13 @@
 
         <activity android:name=".lockscreen.LockScreenActivity" />
         <activity android:name=".bottonClickDiffusion.DiffusionActivity" />
-        <activity android:name=".slide.SlideActivity" />
-        <activity android:name=".horizontalSlip.HorizontalSlipActivity"></activity>
+        <activity
+            android:name=".slide.SlideActivity"
+            android:screenOrientation="landscape" />
+        <activity
+            android:name=".horizontalSlip.HorizontalSlipActivity"
+            android:screenOrientation="landscape" />
+        <activity android:name=".logdemo.LogActivity"></activity>
     </application>
 
 </manifest>
