--- a/build.gradle
+++ b/build.gradle
@@ -8,8 +8,10 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.1'
-        
-
+        //butterknife 添加1。
+        classpath 'com.jakewharton:butterknife-gradle-plugin:8.2.1'
+        //greendao
+        classpath 'org.greenrobot:greendao-gradle-plugin:3.2.2'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
