--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,5 @@ dependencies {
     implementation 'org.greenrobot:greendao-generator:3.2.2'
     //数据库加密,同时解决 Caused by: java.lang.ClassNotFoundException: Didn't find class "net.sqlcipher.database.SQLiteOpenHelper" on path
     implementation 'net.zetetic:android-database-sqlcipher:3.5.9@aar'
+    compile 'com.linsea:universalvideoview:1.1.0@aar'
 }
