--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,16 @@
     <!-- 锁屏权限 -->
     <uses-permission android:name="android.permission.DISABLE_KEYGUARD" />
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <!-- 数据库存储权限 -->
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <!-- 判断联网状态 -->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -22,9 +32,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".statusBar.StatusBarShowActivity" />
-        <activity android:name=".lockscreen.StartLockServiceActivity"
-            android:launchMode="singleTask"
-            />
+        <activity
+            android:name=".lockscreen.StartLockServiceActivity"
+            android:launchMode="singleTask" />
 
         <service android:name=".lockscreen.LockScreenService" />
 
@@ -42,7 +52,13 @@
             android:name=".multipleSet.MultipleSetActivity"
             android:screenOrientation="landscape" />
         <activity android:name=".dialog.DialogActivity" />
-        <activity android:name=".greendao.GreenDaoActivity"></activity>
+        <activity android:name=".greendao.GreenDaoActivity" />
+        <activity android:name=".judgeNetworkConnected.NetWorkConnectedActivity" />
+        <activity android:name=".videopaly.VideoPalyActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:theme="@style/VideoAppTheme"
+            >
+        </activity>
     </application>
 
 </manifest>
