--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,7 +58,8 @@
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:theme="@style/VideoAppTheme" />
         <activity android:name=".animation.AnimationActivity" />
-        <activity android:name=".language.LanguageActivity"></activity>
+        <activity android:name=".language.LanguageActivity" />
+        <activity android:name=".butterKnifeDemo.ButterKnifeActivity"></activity>
     </application>
 
 </manifest>
