--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,6 @@ dependencies {
     //数据库加密,同时解决 Caused by: java.lang.ClassNotFoundException: Didn't find class "net.sqlcipher.database.SQLiteOpenHelper" on path
     implementation 'net.zetetic:android-database-sqlcipher:3.5.9@aar'
     compile 'com.linsea:universalvideoview:1.1.0@aar'
+    implementation 'com.squareup.okhttp3:okhttp:3.11.0'
+    implementation 'com.google.code.gson:gson:2.8.4'
 }
