--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,10 +17,11 @@
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
 
     <application
-        android:name=".BaseApp"
+        android:name=".mvpDemo.view.MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:largeHeap="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -65,7 +66,10 @@
         <activity android:name=".butterKnifeDemo.ButterKnifeActivity" />
         <activity android:name=".httpWeather.HttpWeatherActivity" />
         <activity android:name=".retrofitDemo.RetrofitActivity" />
-        <activity android:name=".cameraDemo.Camera2Activity"></activity>
+        <activity android:name=".cameraDemo.Camera2Activity" />
+        <activity android:name=".listautomaticsliding.ListAutomaticSlidingActivity" />
+        <activity android:name=".mvpDemo.view.LoginActivity" />
+        <activity android:name=".mvpDemo.view.RegisterActivity"></activity>
     </application>
 
 </manifest>
