--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,12 +45,14 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:3.11.0'
     implementation 'com.google.code.gson:gson:2.8.4'
     //Retrofit 需加okhttp---- 由于Retrofit是基于OkHttp，所以还需要添加OkHttp库依赖 ,  设置数据解析器时还需添加Gson
-    implementation "io.reactivex.rxjava2:rxjava:2.2.4"
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.4'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.5.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.11.0'
-
     implementation 'com.android.support:recyclerview-v7:27.1.1'
+    implementation files('libs/org.eclipse.paho.client.mqttv3.jar')
+    //fresco
+    implementation 'com.facebook.fresco:fresco:1.12.1'
 }
